[package]
name = "fhirpath"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
assert-json-diff = "2.0.2"
chrono = "0.4.39"
fancy-regex = "0.14.0"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
regex = "1.10.6"
serde = "1.0.217"
serde_json = { version = "1.0.127", features = ["arbitrary_precision"]}

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.0"
