[package]
name = "fhirpathrs"
version = "0.1.1-beta.0"
edition = "2021"
description = "Fhirpath implementation in Rust"
repository = "https://github.com/richardcbrown/fhirpathrs"
keywords = ["fhirpath", "FHIR", "HL7"]
license-file = "LICENSE.md"
readme = "README.md"
exclude = [".gitignore", ".vscode"]

[dependencies]
assert-json-diff = "2.0.2"
chrono = "0.4.39"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
regex = "1.10.6"
rust_decimal = { version = "1.36.0", features=["maths", "serde", "serde-arbitrary-precision", "serde-float"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["arbitrary_precision"]}

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.0"
